fixed landscape on mobile phones

--- a/ejercicio-2/src/App.css
+++ b/ejercicio-2/src/App.css
@@ -2,8 +2,8 @@ html,
 body,
 #root,
 .map-container {
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	padding: 0;
 	margin: 0;
 }
